# duende

./: Cargo.toml  build.rs
src/: application_context.rs  common.rs  drawables.rs  errors.rs  internal.rs  internal_game_loop.rs  lib.rs  main.rs  three_d.rs  utils.rs
src/common/: application_builder.rs  application_context.rs  drawables.rs  errors.rs  game.rs  gl.rs  helpers.rs  wrappers.rs
src/common/wrappers/: program_wrapper.rs
src/drawables/: test_game_object.rs
src/drawables/shaders/: fragment_shader.glsl
src/internal/: internal_game_loop.rs
src/shader/: vertex_shader.glsl
src/three_d/: game_objects.rs  three_d_application_context.rs
src/three_d/game_objects/: test_game_object.rs
src/three_d/game_objects/shaders/: fragment_shader.glsl  vertex_shader.glsl
src/utils/: mut_cell.rs
