[package]
name = "duende"
version = "0.1.0"
edition = "2021"

[dependencies]
glutin = "0.32"
raw-window-handle = "0.6"
glutin-winit = "0.5"
winit = "0.30"
tracing = "0.1"
fnv = "1.0"
thiserror = "1.0"
bumpalo = { version = "3.16.0", features = ["allocator_api"] }

[build-dependencies]
cfg_aliases = "0.2.1"
gl_generator = "0.14.0"
